--- a/src/styles/menubar.scss
+++ b/src/styles/menubar.scss
@@ -100,6 +100,6 @@ $background-dark: #212121;
   right: 0;
   bottom: 0;
   width: 300px;
-  background: #2cf1aa;
+  background: $border;
   z-index: 1;
 }
