--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -32,7 +32,8 @@ body {
   top: 0;
   width: 32px;
   height: 32px;
-  box-shadow: 0 0 0 2px #fd4347 inset;
+  box-shadow: 0 0 0 2px #fd4f43 inset;
+
   border-radius: 16px;
   z-index: 100;
 }
@@ -81,7 +82,7 @@ $bar-height-sm: 64px + $top-border-height;
   }
 
   &.dark-background {
-    background-color: #212121;
+    background-color: #181818;
   }
 
   &.mint-background {
