--- a/src/styles/404.scss
+++ b/src/styles/404.scss
@@ -1,5 +1,5 @@
 .MuiButton-root.notfound-button {
-  font-family: "Airbnb Cereal App", sans-serif;
+  font-family: 'Airbnb Cereal App', sans-serif;
   font-weight: 500;
   border-radius: 36px;
   text-transform: none;
