--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -1,33 +1,30 @@
-@font-face {
-  font-family: 'Airbnb Cereal App';
-  font-style: normal;
-  font-weight: 300;
-  src: local('Airbnb Cereal App Light'),
-    url('../fonts/AirbnbCerealLight.woff') format('woff');
-}
+// @font-face {
+//   font-family: 'Airbnb Cereal App';
+//   font-style: normal;
+//   font-weight: 300;
+//   src: local('Airbnb Cereal App Light'),
+//     url('../assets/fonts/AirbnbCerealLight.woff') format('woff');
+// }
 
 @font-face {
   font-family: 'Airbnb Cereal App';
   font-style: normal;
   font-weight: 400;
-  src: local('Airbnb Cereal App Book'),
-    url('../fonts/AirbnbCerealBook.woff') format('woff');
+  src: url('../assets/fonts/AirbnbCerealBook.woff') format('woff');
 }
 
 @font-face {
   font-family: 'Airbnb Cereal App';
   font-style: normal;
   font-weight: 500;
-  src: local('Airbnb Cereal App Medium'),
-    url('../fonts/AirbnbCerealMedium.woff') format('woff');
+  src: url('../assets/fonts/AirbnbCerealMedium.woff') format('woff');
 }
 
 @font-face {
   font-family: 'Airbnb Cereal App';
   font-style: normal;
   font-weight: 600;
-  src: local('Airbnb Cereal App Bold'),
-    url('../fonts/AirbnbCerealBold.woff') format('woff');
+  src: url('../assets/fonts/AirbnbCerealBold.woff') format('woff');
 }
 
 // @font-face {
